MDEV-5323 Ctrl-C not working under Ubuntu

don't reset interrupted_query after sending the KILL signal, otherwise
the client won't know it has to stop fetching and printing the data.